--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,7 @@ authors = ["host"]
 # edition = "2018"
 
 [dependencies]
+serde = "1.0.80"
+serde_derive = "1.0.80"
 serde_json = "1.0.32"
 base64 = "0.10.0"
