--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,15 @@
 [package]
 name = "grep_json_deserialize"
-version = "0.1.0"
-authors = ["host"]
-# edition = "2018"
+version = "0.1.1"
+authors = ["Avi ד <avi.the.coder@gmail.com>"]
+license = "MIT"
+repository = "https://github.com/Avi-D-coder/grep_json_deserialize"
+description = "A parser for the output of ripgrep --json"
+readme = "README.md"
+keywords = ["ripgrep", "json"]
+categories = ["command-line-interface", "parsing"]
+maintenance = { status = "passively-maintained" }
+
 
 [dependencies]
 serde = "1.0.80"
